--- a/friends/styles/friends.module.css
+++ b/friends/styles/friends.module.css
@@ -11,6 +11,7 @@
     border-radius: 6px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     width: 280px;
+    margin-top: 5px;
 }
 
 .filterHeader {
